gcc/testsuite/g++.dg/cpp0x/noexcept14.C
// PR c++/50309
// { dg-do compile { target c++11 } }

void foo () noexcept () { } // { dg-error "expected" }
